increased background height and changed star postion from fixed to absolute to allow for shifting

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -8,7 +8,7 @@ body {
 }
 
 .background {
-    height: 600vh;
+    height: 1000vh;
     background-color: $black;
 }
 
@@ -34,7 +34,7 @@ body {
 }
 
 .star {
-    position: fixed;
+    position: absolute;
     background-color: $white;
 
     width: 4px;
